--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-parent></app-parent>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <app-item></app-item>
+        </div>
+    </div>
+</div>
