--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -10,4 +10,5 @@ ID: {{currItem.id}}, Name: {{currItem.name}}
     <input type="radio" name="colors" (click)="color='cyan'">Cyan
   </div>
 
-<div appNgIfAttribute [bgColor]="color">Testing manual directive</div>
+<div appHighlight [bgColor]="color">Testing manual directive</div>
+<div *appUnless="false">Testing structural directive</div>
