add router manually

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-md-12">
             <app-item></app-item>
         </div>
     </div>
-</div>
+</div> -->
+<h1>Angular Router App</h1>
+<nav>
+  <ul>
+    <li><a routerLink="/first" routerLinkActive="active">First Component</a></li>
+    <li><a routerLink="/second" routerLinkActive="active">Second Component</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
