--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="currItem">
+<!-- <div *ngIf="currItem">
 ID: {{currItem.id}}, Name: {{currItem.name}}
 </div>
 
@@ -15,4 +15,6 @@ ID: {{currItem.id}}, Name: {{currItem.name}}
 
 <p [appAddClass]="'testCustomClass'">Hello World!!!</p>
 <p [appAddClass]="'testCustomClass2'">Hello World!!!</p>
-<p>Hello World!!!</p>
+<p>Hello World!!!</p> -->
+
+<h1>Items Works!!!</h1>
