--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,8 @@
     </div>
 </div> -->
 <h1>Angular Router App</h1>
-<nav>
-  <ul>
-    <li><a routerLink="/first" routerLinkActive="active">First Component</a></li>
-    <li><a routerLink="/second" routerLinkActive="active">Second Component</a></li>
-  </ul>
-</nav>
+<ul>
+    <li><a routerLink="/first" >First Component</a></li>
+    <li><a routerLink="/second" >Second Component</a></li>
+</ul>
 <router-outlet></router-outlet>
