--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,6 +1,6 @@
 <p>first works!</p>
 <ul>
-    <li><a routerLink="one" >First-One Component</a></li>
+    <li><a [routerLink]="['one']" >First-One Component</a></li>
     <li><a routerLink="two" >First-Two Component</a></li>
 </ul>
 <router-outlet></router-outlet>
