--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
         </div>
     </div>
 </div> -->
-<h1>Angular Router App</h1>
+<h1>Router Works!</h1>
 <ul>
     <li><a routerLink="/first" >First Component</a></li>
     <li><a routerLink="/second" >Second Component</a></li>
 </ul>
+<button (click)="logIn()">Login</button>
+<button (click)="logOut()">LogOut</button>
 <router-outlet></router-outlet>
