canActivateChild: problem fixed

--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -3,4 +3,6 @@
     <li><a [routerLink]="['one']" >First-One Component</a></li>
     <li><a routerLink="two" >First-Two Component</a></li>
 </ul>
+<button (click)="logIn()">Child Login</button>
+<button (click)="logOut()">Child LogOut</button>
 <router-outlet></router-outlet>
